Templates/development/deploy-argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: argocd-ingress
 namespace: argocd
 annotations:
  cert-manager.io/cluster-issuer: "letsencrypt-development"
spec:
 tls:
   - hosts:
       - argocd.discordfeeds.com
     secretName: discordfeeds-com-development-tls
 rules:
   - host: argocd.discordfeeds.com
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: argocd-server
               port:
                number: 443
